@@ -9,17 +9,19 @@ import com.challenge.chat.domain.chat.entity.MessageType;
 import com.challenge.chat.domain.chat.repository.ChatRepository;
 import com.challenge.chat.domain.chat.repository.ChatRoomRepository;
 import com.challenge.chat.domain.chat.repository.MemberChatRoomRepository;
+import com.challenge.chat.domain.member.entity.Member;
+import com.challenge.chat.domain.member.service.MemberService;
 import com.challenge.chat.exception.RestApiException;
 import com.challenge.chat.exception.dto.ChatErrorCode;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.mongodb.core.MongoTemplate;
-import org.springframework.data.mongodb.core.query.Criteria;
-import org.springframework.data.mongodb.core.query.Query;
+
+import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
 import org.springframework.messaging.simp.SimpMessageHeaderAccessor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
@@ -33,66 +35,65 @@ public class ChatService {
 	private final MemberChatRoomRepository memberChatRoomRepository;
 	private final ChatRoomRepository chatRoomRepository;
 	private final ChatRepository chatRepository;
-	private final MongoTemplate mongoTemplate;
+	private final MemberService memberService;
+	private final ElasticsearchOperations elasticsearchOperations;
 
 	@Transactional
-	public ChatRoomDto makeChatRoom(final ChatRoomDto chatRoomDto, final String memberEmail) {
-		log.info("Service : 채팅방 생성");
+	public ChatRoomDto makeChatRoom(final String roomName, final String memberEmail) {
 
-		ChatRoom chatRoom = ChatRoomDto.toEntity(chatRoomDto);
+		ChatRoom chatRoom = ChatRoom.of(roomName);
+		Member member = memberService.findMemberByEmail(memberEmail);
 
 		// TODO : 비동기적으로 chatRoom 과 memberChatRoom을 저장하기
 		chatRoomRepository.save(chatRoom);
-		memberChatRoomRepository.save(new MemberChatRoom(chatRoom.getRoomId(), memberEmail));
+		memberChatRoomRepository.save(MemberChatRoom.of(chatRoom, member));
 
 		return ChatRoomDto.from(chatRoom);
 	}
 
 	@Transactional
-	public ChatRoomDto registerChatRoom(final ChatRoomDto chatRoomDto, final String memberEmail) {
-		log.info("Service : 채팅방 추가");
+	public ChatRoomDto registerChatRoom(final String roomCode, final String memberEmail) {
 
-		ChatRoom chatRoom = findChatRoom(chatRoomDto.getRoomId());
-		memberChatRoomRepository.save(new MemberChatRoom(chatRoomDto.getRoomId(), memberEmail));
+		ChatRoom chatRoom = findChatRoom(roomCode);
+		Member member = memberService.findMemberByEmail(memberEmail);
+		if (memberChatRoomRepository.findByMemberAndRoom(member, chatRoom).isEmpty()){
+			memberChatRoomRepository.save(MemberChatRoom.of(chatRoom, member));
+		}
 
 		return ChatRoomDto.from(chatRoom);
 	}
 
 	@Transactional(readOnly = true)
 	public List<ChatRoomDto> searchChatRoomList(final String memberEmail) {
-		log.info("Service : 채팅방 리스트 조회");
 
 		// TODO : 채팅방 리스트를 가져오는 동작이 2번의 쿼리를 동기적으로 실행해서 오히려 느려질 수 있는 지점이 될 수 있음
-		List<String> roomIds = findChatRoomId(memberEmail);
+		Member member = memberService.findMemberByEmail(memberEmail);
+		List<MemberChatRoom> memberChatRoomList = findChatRoomByMember(member);
 
-		Query query = new Query(Criteria.where("roomId").in(roomIds));
-		return mongoTemplate.find(query, ChatRoom.class)
+		return memberChatRoomList
 			.stream()
-			.map(ChatRoomDto::from)
+			.map(a -> ChatRoomDto.from(a.getRoom()))
 			.collect(Collectors.toList());
 	}
 
 	@Transactional(readOnly = true)
-	public List<ChatDto> searchChatList(final String roomId, final String memberEmail) {
-		log.info("Service : 채팅방 메세지 조회");
+	public List<ChatDto> searchChatList(final String roomCode, final String memberEmail) {
 
-		MemberChatRoom memberChatRoom = findMemberChatRoom(roomId, memberEmail);
+		List<Chat> chatList = chatRepository.findByRoomCode(roomCode).orElse(Collections.emptyList());
 
-		return chatRepository
-			.findByRoomId(roomId)
-			.stream()
-			.sorted(Comparator.comparing(Chat::getCreatedAt))
+		return chatList.stream()
 			.map(ChatDto::from)
-			.toList();
+			.sorted(Comparator.comparing(ChatDto::getCreatedAt))
+			.collect(Collectors.toList());
 	}
 
+	@Transactional(readOnly = true)
 	public ChatDto makeEnterMessageAndSetSessionAttribute(ChatDto chatDto, SimpMessageHeaderAccessor headerAccessor) {
-		log.info("Service : 채팅방 입장");
 
 		// socket session에 사용자의 정보 저장
 		try {
 			Objects.requireNonNull(headerAccessor.getSessionAttributes()).put("email", chatDto.getEmail());
-			headerAccessor.getSessionAttributes().put("roomId", chatDto.getRoomId());
+			headerAccessor.getSessionAttributes().put("roomCode", chatDto.getRoomCode());
 			headerAccessor.getSessionAttributes().put("nickname", chatDto.getNickname());
 		} catch (Exception e) {
 			throw new RestApiException(ChatErrorCode.SOCKET_CONNECTION_ERROR);
@@ -103,45 +104,57 @@ public class ChatService {
 		return chatDto;
 	}
 
-	public void sendChatRoom(ChatDto chatDto) {
-		log.info("Service : 채팅 보내기 - {}", chatDto.getMessage());
+	// public void sendChatRoom(ChatDto chatDto) {
+	// 	chatRepository.save(ChatDto.toEntity(chatDto));
+	// }
 
-		chatRepository.save(ChatDto.toEntity(chatDto));
+	public List<ChatDto> findChatList(final String roomCode, final String message) {
+
+		List<Chat> chatList = chatRepository.findByRoomCodeAndMessageContaining(roomCode, message)
+			.orElse(Collections.emptyList());
+
+		return chatList.stream()
+			.map(ChatDto::from)
+			.collect(Collectors.toList());
+
+		// QueryBuilder queryBuilder = QueryBuilders.boolQuery()
+		// 	.must(QueryBuilders.matchQuery("message", message))
+		// 	.must(QueryBuilders.matchQuery("roomCode", roomCode));
+		//
+		// NativeSearchQuery searchQuery = new NativeSearchQueryBuilder()
+		// 	.withQuery(queryBuilder)
+		// 	.build();
+		//
+		// SearchHits<ChatES> searchHits = elasticsearchOperations.search(searchQuery, ChatES.class);
+		//
+		// return searchHits.stream()
+		// 	.map(SearchHit::getContent)
+		// 	.map(ChatDto::from)
+		// 	.collect(Collectors.toList());
 	}
 
 	public ChatDto leaveChatRoom(SimpMessageHeaderAccessor headerAccessor) {
-		log.info("Service 채팅방 나가기");
 
-		String roomId = (String)headerAccessor.getSessionAttributes().get("roomId");
+		String roomCode = (String)headerAccessor.getSessionAttributes().get("roomCode");
 		String nickName = (String)headerAccessor.getSessionAttributes().get("nickName");
 		String userId = (String)headerAccessor.getSessionAttributes().get("userId");
 
 		return ChatDto.builder()
 			.type(MessageType.LEAVE)
-			.roomId(roomId)
+			.roomCode(roomCode)
 			.nickname(nickName)
 			.email(userId)
 			.message(nickName + "님 퇴장!! ヽ(*。>Д<)o゜")
 			.build();
 	}
 
-	public ChatRoom findChatRoom(String roomId) {
-		return chatRoomRepository.findByRoomId(roomId).orElseThrow(
+	public ChatRoom findChatRoom(String roomCode) {
+		return chatRoomRepository.findByRoomCode(roomCode).orElseThrow(
 			() -> new RestApiException(ChatErrorCode.CHATROOM_NOT_FOUND));
 	}
 
-	public MemberChatRoom findMemberChatRoom(final String roomId, final String memberEmail) {
-		return memberChatRoomRepository.findByMemberEmailAndRoomId(memberEmail, roomId).orElseThrow(
-			() -> new RestApiException(ChatErrorCode.CHATROOM_NOT_FOUND)
-		);
-	}
-
-	public List<String> findChatRoomId(final String email) {
-		List<MemberChatRoom> memberChatRoomList = memberChatRoomRepository.findByMemberEmail(email).orElse(null);
-		if (memberChatRoomList == null) {
-			return null;
-		}
-		return memberChatRoomList.stream()
-			.map(MemberChatRoom::getRoomId).toList();
+	private List<MemberChatRoom> findChatRoomByMember(Member member) {
+		return memberChatRoomRepository.findByMember(member).orElseThrow(
+			() -> new RestApiException(ChatErrorCode.CHATROOM_NOT_FOUND));
 	}
 }
